--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Template</title>
+    <title>Analise de dados</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu">
 
